added img in home

--- a/mainpage/templates/mainpage/contacts.html
+++ b/mainpage/templates/mainpage/contacts.html
@@ -1,6 +1,6 @@
 {% extends 'mainpage/base.html' %}
 {% block content %}
-<div class="container"><h1>Andrew Cheremkin Website</h1>
+<div class="container">
     <h3>Contacts:</h3>
     <ul class="list-group">
         <li class="list-group-item">Telegram: <a href="https://t.me/acheremkin" target="_blank">@acheremkin</a></li>
