--- a/mainpage/templates/mainpage/resume.html
+++ b/mainpage/templates/mainpage/resume.html
@@ -1,6 +1,7 @@
 {% extends 'mainpage/base.html' %}
 {% block content %}
-<div class="container"><h1>Andrew Cheremkin Website</h1>
+<div class="container">
     <h3>Resume:</h3>
+    <p>This section under development</p>
 </div>
 {% endblock %}
