--- a/mainpage/templates/mainpage/home.html
+++ b/mainpage/templates/mainpage/home.html
@@ -1,7 +1,11 @@
 {% extends 'mainpage/base.html' %}
 {% block content %}
-<div class="container"><h1>Andrew Cheremkin Website</h1>
-    <h3>This is a home page</h3>
-    <p>I will put smth here</p>
+{% load static %}
+<div class="container">
+    <h3>Python Developer since 2021</h3>
+    <p>Hello! My name is Andrew and you are on my personal webpage powered by Python/Django4</p>
+    <p>You can check other pages of this website, go check them in navigation menu on the top.</p>
+    <img src="{% static 'mainpage/mainphoto.jpg' %}" class="rounded mx-auto d-block" alt="...">
+    <p>Any questions or suggestions? Find my contacts <a href="{% url 'contacts' %}">here</a></p>
 </div>
 {% endblock %}
