--- a/mainpage/templates/mainpage/projects.html
+++ b/mainpage/templates/mainpage/projects.html
@@ -1,7 +1,7 @@
 {% extends 'mainpage/base.html' %}
 {% block content %}
-<div class="container"><h1>Andrew Cheremkin Website</h1>
-    <h3>Projects:</h3>
+<div class="container">
+    <h3>My Projects:</h3>
     <div class="row">
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
@@ -9,7 +9,7 @@
                 <h5 class="card-title">To-Do Website</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Simple to-do tracker</h6>
                 <p class="card-text">Create memos and to-dos, and set them completed. Supports authentication. Made on Django</p>
-                <a href="http://todo.cheremkin.ru/" class="card-link" target="_blank">Check on production</a><br>
+                <a href="http://todo.cheremkin.ru/" class="card-link" target="_blank">Go to Todo</a><br>
                 <a href="https://github.com/bg4erem/cheremkinru_todo" class="card-link" target="_blank">Source code on Github</a>
                 </div>
             </div>
@@ -17,11 +17,11 @@
         <div class="col-sm-3">
             <div class="card" style="width: 18rem;">
                 <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
+                <h5 class="card-title">Telegram Bot</h5>
+                <h6 class="card-subtitle mb-2 text-muted">KZT rates in Astana</h6>
+                <p class="card-text">This bot provides the best real time KZT-RUB exchange rates in Astana as well as exchanges with the best rate.</p>
+                <a href="https://t.me/getrateskzbot" class="card-link">Open in Telegram</a><br>
+                <a href="#" class="card-link">Source code on Github</a>
                 </div>
             </div>
         </div>
