fixed img tag in html template

--- a/mainpage/templates/mainpage/home.html
+++ b/mainpage/templates/mainpage/home.html
@@ -5,7 +5,7 @@
     <h3>Python Developer since 2021</h3>
     <p>Hello! My name is Andrew and you are on my personal webpage powered by Python/Django4</p>
     <p>You can check other pages of this website, go check them in navigation menu on the top.</p>
-    <img src="{% static 'mainpage/mainphoto.jpg' %}" class="rounded mx-auto d-block" alt="...">
+    <div class="container"><img src="{% static 'mainpage/mainphoto.jpg' %}" class="img-fluid rounded mx-auto d-block" alt="..."></div>
     <p>Any questions or suggestions? Find my contacts <a href="{% url 'contacts' %}">here</a></p>
 </div>
 {% endblock %}
