added PDF resume

--- a/mainpage/templates/mainpage/projects.html
+++ b/mainpage/templates/mainpage/projects.html
@@ -4,7 +4,7 @@
     <h3>My Projects:</h3>
     <div class="row">
         <div class="col-sm-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 20rem;">
                 <div class="card-body">
                 <h5 class="card-title">To-Do Website</h5>
                 <h6 class="card-subtitle mb-2 text-muted">Simple to-do tracker</h6>
@@ -15,24 +15,13 @@
             </div>
         </div>
         <div class="col-sm-3">
-            <div class="card" style="width: 18rem;">
+            <div class="card" style="width: 20rem;">
                 <div class="card-body">
                 <h5 class="card-title">Telegram Bot</h5>
                 <h6 class="card-subtitle mb-2 text-muted">KZT rates in Astana</h6>
-                <p class="card-text">This bot provides the best real time KZT-RUB exchange rates in Astana as well as exchanges with the best rate.</p>
+                <p class="card-text">This bot provides the best real time KZT-RUB exchange rates in Astana as well as exchanges with the best rate. Backend made with Python/Selenium</p>
                 <a href="https://t.me/getrateskzbot" class="card-link">Open in Telegram</a><br>
                 <a href="#" class="card-link">Source code on Github</a>
-                </div>
-            </div>
-        </div>
-        <div class="col-sm-3">
-            <div class="card" style="width: 18rem;">
-                <div class="card-body">
-                <h5 class="card-title">Card title</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Card subtitle</h6>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <a href="#" class="card-link">Card link</a>
-                <a href="#" class="card-link">Another link</a>
                 </div>
             </div>
         </div>
