added new project

--- a/mainpage/templates/mainpage/projects.html
+++ b/mainpage/templates/mainpage/projects.html
@@ -6,11 +6,11 @@
         <div class="col-sm-3">
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
-                <h5 class="card-title">To-Do Website</h5>
-                <h6 class="card-subtitle mb-2 text-muted">Simple to-do tracker</h6>
-                <p class="card-text">Create memos and to-dos, and set them completed. Supports authentication. Made on Django</p>
-                <a href="http://todo.cheremkin.ru/" class="card-link" target="_blank">Go to Todo</a><br>
-                <a href="https://github.com/bg4erem/cheremkinru_todo" class="card-link" target="_blank">Source code on Github</a>
+                <h5 class="card-title">Analytics Dashboard</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Realty analytics in Yakutsk</h6>
+                <p class="card-text">Yakutsk is my hometown. The website provides analytics of realty sale posts published on local website</p>
+                <a href="https://data.cheremkin.ru" class="card-link" target="_blank">Check</a><br>
+                <a href="#" class="card-link">Source code on Github</a>
                 </div>
             </div>
         </div>
@@ -18,10 +18,21 @@
             <div class="card" style="width: 20rem;">
                 <div class="card-body">
                 <h5 class="card-title">Telegram Bot</h5>
-                <h6 class="card-subtitle mb-2 text-muted">KZT rates in Astana</h6>
-                <p class="card-text">This bot provides the best real time KZT-RUB exchange rates in Astana as well as exchanges with the best rate. Backend made with Python/Selenium</p>
-                <a href="https://t.me/getrateskzbot" class="card-link">Open in Telegram</a><br>
+                <h6 class="card-subtitle mb-2 text-muted">KZT rates near me</h6>
+                <p class="card-text">I've relocated to Kazakhstan, so this is why I made this bot. It provides actual KZT exchange rates near your location.</p>
+                <a href="https://t.me/kztnearby_bot" class="card-link" target="_blank">Open in Telegram</a><br>
                 <a href="#" class="card-link">Source code on Github</a>
+                </div>
+            </div>
+        </div>
+        <div class="col-sm-3">
+            <div class="card" style="width: 20rem;">
+                <div class="card-body">
+                <h5 class="card-title">To-Do Website</h5>
+                <h6 class="card-subtitle mb-2 text-muted">Simple to-do tracker</h6>
+                <p class="card-text">Create memos and to-dos, and set them completed. Supports authentication. Made on Django</p>
+                <a href="http://todo.cheremkin.ru/" class="card-link" target="_blank">Go to Todo</a><br>
+                <a href="https://github.com/bg4erem/cheremkinru_todo" class="card-link" target="_blank">Source code on Github</a>
                 </div>
             </div>
         </div>
