--- a/mainpage/templates/mainpage/contacts.html
+++ b/mainpage/templates/mainpage/contacts.html
@@ -8,6 +8,7 @@
         <li class="list-group-item">Github: <a href="https://github.com/bg4erem/" target="_blank">https://github.com/bg4erem/</a></li>
         <li class="list-group-item">Facebook: <a href="https://www.facebook.com/andrey.cheremkin" target="_blank">Andrei Cheremkin</a></li>
         <li class="list-group-item">Instagram: <a href="https://www.instagram.com/a.cheremkin/" target="_blank">a.cheremkin</a></li>
+        <li class="list-group-item">Whatsapp: <a href="https://wa.me/+79245632198" target="_blank">Chat in Whatsapp</a></li>
       </ul>
 </div>
 {% endblock %}
